[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Sandbox/Sandbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Utility/Camera.tscn" type="PackedScene" id=3]

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 238.0
margin_bottom = 270.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HBoxContainer/ViewportContainer"]
size = Vector2( 238, 270 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" parent="HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="Level" parent="HBoxContainer/ViewportContainer/Viewport" instance=ExtResource( 1 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 242.0
margin_right = 480.0
margin_bottom = 270.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="HBoxContainer/ViewportContainer2"]
size = Vector2( 238, 270 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2" parent="HBoxContainer/ViewportContainer2/Viewport2" instance=ExtResource( 3 )]
